# SkinningMeshAnimations

./: CMakeLists.txt  README.md
3rdLibs/glad/include/glad/: glad.h
3rdLibs/glad/src/: glad.c
head/: bone.h  joint.h  shader_m.h
optional/head/: joint.h
optional/src/: main.cpp  shader_m.vs
src/: joint.vs  main.cpp  shader_begin.vs  shader_m.vs  sphere.fs  sphere.vs
